# telegram-bott

./: .env  .gitignore  config.py  database.py  kino.py  media_bot.db  pyproject.toml  requirements.txt
handlers/: admin.py  inline.py  media.py  start.py
