[tool.poetry]
name = "kino-bot"
version = "0.1.0"
description = "Kino bot"
authors = ["Siz <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.7"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"